# cvt

./: .clang-format  .travis.yml  CMakeLists.txt  Copyright.txt  README.md
cvt/: CMakeLists.txt  CVTConfig.cmake.in  CVTVersion.h.in
cvt/cl/: CLBuffer.cpp  CLBuffer.h  CLCommandQueue.cpp  CLCommandQueue.h  CLContext.cpp  CLContext.h  CLDebayer.cpp  CLDebayer.h  CLDevice.cpp  CLDevice.h  CLEvent.cpp  CLEvent.h  CLException.cpp  CLException.h  CLGUMM.h  CLImage2D.cpp  CLImage2D.h  CLImageDesc.h  CLImageFormat.cpp  CLImageFormat.h  CLKernel.cpp  CLKernel.h  CLLocalSpace.h  CLMatrix.h  CLMemory.h  CLNDRange.h  CLObject.h  CLObject.inl  CLPlatform.h  CLProgram.cpp  CLProgram.h  CLPyramid.cpp  CLPyramid.h  CLRGBDWarpReduce.h  CLUtil.h  CLWarp.cpp  CLWarp.h  OpenCL.cpp  OpenCL.h
cvt/cl/kernel/: BC.cl  BCS.cl  BHFlow.cl  BHStereo.cl  BHStereo512.cl  BRIEF.cl  BRIEFPattern.h  BRPattern.h  CENSUSPattern.h  DECAF.cl  FAST.cl  Feature.cl  FlowColorCode.cl  GRADIENTPattern.h  GUMM.cl  Harris.cl  Homography.cl  KLT.cl  KLT_stereo.cl  Line.cl  MC.cl  MWC64X.cl  Matrix3.cl  Matrix4.cl  Matrix5.cl  Matrix6.cl  Matrix8.cl  PDDHuber.cl  PDDHuberDiffTensor.cl  PDDHuberWeighted.cl  PDDROF.cl  PDDROFDiffTensor.cl  PDDROFWeighted.cl  PDDiffTensor.cl  PDEdgeWeight.cl  PDHL.cl  PDHuber.cl  PDHuberWeighted.cl  PDHuberWeightedInpaint.cl  PDLOG1.cl  (+40 more)
cvt/com/: AsyncTCPClient.h  AsyncTCPServer.h  AsyncUDPClient.h  Host.cpp  Host.h  SharedMemory.h  Socket.cpp  Socket.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  UDPClient.cpp  UDPClient.h
cvt/container/: List.h  RBTree.h
cvt/geom/: ArcBall.h  Box.h  CBezier.h  Ellipse.h  KDTree.h  KDTreeTest.cpp  Line2D.h  MarchingCubes.cpp  MarchingCubes.h  PointSet.cpp  PointSet.h  PointSetTest.cpp  Polygon.h  QBezier.h  Rect.cpp  Rect.h
cvt/geom/scene/: Scene.cpp  Scene.h  SceneCamera.h  SceneGeometry.cpp  SceneGeometry.h  SceneLight.h  SceneLines.h  SceneLoader.h  SceneMaterial.h  SceneMesh.cpp  SceneMesh.h  SceneNode.h  ScenePoints.h  SceneSpatial.h  SceneTexture.h
cvt/gfx/: Alignment.h  Clipping.h  Color.cpp  Color.h  ColorspaceXYZ.cpp  ColorspaceXYZ.h  Drawable.h  DummyFont.h  Font.h  GFX.cpp  GFX.h  GFXEngine.h  GFXEngineImage.cpp  GFXEngineImage.h  GaussianCL.h  IBorder.h  IBoxFilter.cpp  IBoxFilter.h  ICanny.h  IColorCode.h  IColorCodeMap.h  IComponents.h  IConvert.cpp  IConvert.h  IConvolve.cpp  IConvolve.h  IDecompose.cpp  IDecompose.h  IExpr.h  IExprType.h  IFill.cpp  IFill.h  IFilter.h  IFormat.cpp  IFormat.h  IHistogram.h  IKernel.cpp  IKernel.h  ILoader.h  IMI.h  (+26 more)
cvt/gfx/ifilter/: BoxFilter.cpp  BoxFilter.h  BrightnessContrast.cpp  BrightnessContrast.h  GaussIIR.cpp  GaussIIR.h  GuidedFilter.cpp  GuidedFilter.h  Homography.cpp  Homography.h  ITransform.cpp  ITransform.h  IWarp.cpp  IWarp.h  IntegralFilter.cpp  (+11 more)
cvt/gl/: GFXEngineGL.cpp  GFXEngineGL.h  GFXEngineGLFBO.h  GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLException.h  GLFBO.cpp  GLFBO.h  GLFormat.h  GLLines.h  GLMesh.h  GLPoints.h  GLProgram.cpp  GLProgram.h  GLRBO.h  GLTeapot.cpp  GLTeapot.h  GLTeapot.inl  GLTexFont.cpp  GLTexFont.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  OpenGL.cpp  OpenGL.h
cvt/gui/: Application.cpp  Application.h  BasicTimer.cpp  BasicTimer.h  Button.cpp  Button.h  Events.h  GLView.cpp  GLView.h  ImageView.cpp  ImageView.h  KeyCodes.h  Label.cpp  Label.h  Moveable.cpp  Moveable.h  ParamSetView.cpp  ParamSetView.h  ParamView.cpp  ParamView.h  PlotData.h  PlotDataSamples.h  PlotView.cpp  PlotView.h  Slider.h  TimeoutHandler.h  ToggleButton.cpp  ToggleButton.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h  WidgetLayout.h  Window.cpp  Window.h
cvt/io/: Camera.cpp  Camera.h  CameraInfo.cpp  CameraInfo.h  CameraMode.h  CameraModeSet.cpp  CameraModeSet.h  ChameleonStereo.cpp  ChameleonStereo.h  DC1394Camera.cpp  DC1394Camera.h  FileSystem.cpp  FileSystem.h  FloFile.cpp  FloFile.h  GFXEnginePS.h  GNSS.h  GNSSENU.h  IOHandler.h  IOSelect.cpp  IOSelect.h  ImageSequence.cpp  ImageSequence.h  KittiSF2012.cpp  KittiSF2012.h  KittiSF2015.cpp  KittiSF2015.h  KittiVOParser.cpp  KittiVOParser.h  MMVStereoParser.h  OpenNI2Camera.cpp  OpenNI2Camera.h  OpenNICamera.cpp  OpenNICamera.h  OpenNIManager.cpp  OpenNIManager.h  Postscript.h  QTKitCamera.h  QTKitCamera.mm  RGBDInput.h  (+18 more)
cvt/math/: BSpline.h  Complex.cpp  Complex.h  CostFunction.h  FFT.cpp  FFT.h  Fixed.cpp  Fixed.h  Function.h  GA2.h  GA2Test.cpp  GaussNewton.h  JointMeasurements.cpp  JointMeasurements.h  JointMeasurementsTest.cpp  LUP.h  LevenbergMarquard.h  MVExpr.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Matrix6.h  MatrixNM.h  PCA.h  PPCA.h  Polynomial.cpp  Polynomial.h  Quaternion.h  SE3.h  SE3Test.cpp  SL3.h  SL3Test.cpp  Sim2.h  Sim2Test.cpp  SparseBlockMatrix.h  TerminationCriteria.h  (+8 more)
cvt/util/: CPU.h  CVTAssert.h  CVTTest.cpp  CVTTest.h  Condition.h  ConfigFile.cpp  ConfigFile.h  Data.cpp  Data.h  DataIterator.h  Debug.h  Delegate.h  Delegate.inl  EigenBridge.h  Exception.h  Flags.h  IDGenerator.h  Mutex.h  ParamInfo.cpp  ParamInfo.h  ParamSet.cpp  ParamSet.h  Plugin.h  PluginFile.cpp  PluginFile.h  PluginManager.cpp  PluginManager.h  RNG.h  Range.cpp  Range.h  SIMD.cpp  SIMD.h  SIMDAVX.cpp  SIMDAVX.h  SIMDDebug.h  SIMDSSE.cpp  SIMDSSE.h  SIMDSSE2.cpp  SIMDSSE2.h  SIMDSSE3.cpp  (+18 more)
cvt/vision/: BHFlow.cpp  BHFlow.h  BHStereo.cpp  BHStereo.h  BRIEFCL.cpp  BRIEFCL.h  BoardDetector.cpp  BoardDetector.h  CameraCalibration.h  CameraCalibrationTest.cpp  DECAFCL.cpp  DECAFCL.h  Disparity.cpp  Disparity.h  EPnP.cpp  EPnP.h  ESM.h  FASTCL.cpp  FASTCL.h  FaceShape.h  Feature2DROC.h  FeatureCL.h  Ferns.cpp  Ferns.h  Flow.cpp  Flow.h  HCalibration.h  HarrisCL.cpp  HarrisCL.h  ImagePyramid.h  ImagePyramidTest.cpp  IntegralImage.cpp  IntegralImage.h  KLTPatch.h  KLTPatchTest.cpp  KLTStereoCL.cpp  KLTStereoCL.h  LSH.h  MeasurementModel.h  ORBTest.cpp  (+38 more)
package/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/ifilter/: CMakeLists.txt
plugins/iloader/: CMakeLists.txt
plugins/isaver/: CMakeLists.txt
plugins/sceneloader/: CMakeLists.txt
(+339 files in other folders)
